--- a/Libro.tex
+++ b/Libro.tex
@@ -3673,88 +3673,32 @@ In Italia abbiamo una delle pressioni fiscali più alte, ma abbiamo il secondo s
 
 Per comprendere come muoverci è possibile utilizzare la storia, anche se credo sia molto difficile, poiché richiede una notevole capacità di astrazione. Ad esempio, confrontare il riarmo che precedette la Prima Guerra Mondiale con il riarmo attuale è problematico: all’epoca, gli Stati europei si osservavano con sospetto reciproco, e ogni incremento militare generava timore nei vicini. Inoltre, non esisteva ancora la deterrenza nucleare. Per questo, anche se le dinamiche possono sembrare simili, il contesto storico è così diverso da rendere difficile una lettura delle due situazioni. 
 
+Perché ci sono persone che minano il tessuto sociale? Da chi ruba a chi si fa esplodere per un credo?
+Chi di noi si farebbe esplodere per denaro?
+Le motivazioni dietro gesti così estremi sono complesse e multifattoriali. Alcuni potrebbero commettere crimini per fanatismo o avidità, ma in altri casi, condizioni di estrema povertà possono spingere gli individui a compiere furti o atti disperati, anche per sostenere la propria famiglia.
 
+Osservando gli indici sulla popolazione carceraria, osserviamo che non equivalgono a paesi più sicuri. Non basta semplicemente mettere solo disincentivi per scoraggiare la criminalità, ma creare anche le condizioni dove il bilancio tra rischi e benefici risulti svantaggioso, in modo che si abbia più da perdere che da guadagnare.
 
+Il carcere, ad esempio, si è spesso rivelata una misura inefficace, circa il 70\% dei detenuti, una volta scontata la pena, dopo un breve periodo di libertà, finirà nuovamente in detenzione. Il carcere non è una misura efficace per ls rieducazione, ma necessaria per individuo potenzialmente pericolosi per gli altri.
+I Reati violenti si attestano sotto il 10\%, rendendo possibili, per la maggioranza dei detenuti, misure rieducative.
+Potremmo credere che queste persone non meritino un aiuto, ma anche egoisticamente, la detenzione è un costo, così, se riuscissimo a trasformare delle persone da spesa a contribuenti, sarebbe l'ideale. Ogni anno le carceri costano tre miliardi di cui il 70\% va al personale interno e il 2\% a realtà esterne come assistenti sociali.
+In abolire il carcere\endnote{\raggedright\url{https://www.amazon.it/dp/8832964961}} si valutano alcune alternative come affidamento, servizi sociali e domiciliari, che hanno portato il tasso di recidività dal 70\% al 20\%. Anche chi esce con l'indulto ha meno probabilità di entrare nuovamente in carcere. 
 
-
-
-
-Può succedere che le persone, come singoli individui o come gruppo di una società, nel cercare
-di risolvere un problema, causato da una catena di avvenimenti, guardino solo l'ultimo anello
-tentando di risolvere solo quello. Se noi eliminiamo solo lo strato più superficiale senza intervenire sulla
-causa che sta alla base, il problema potrebbe ritornare in futuro.
-
-Perché ci sono persone che minano il tessuto sociale rendendo difficile la convivenza, commettendo atti criminali?
-Come possiamo evitare che ciò accada a più livelli? Da chi ruba a chi si fa esplodere per un credo?
-Chi di noi si farebbe esplodere per denaro o qualsiasi altro motivo? Credo nessuno.
-Le motivazioni dietro gesti così estremi sono complesse e multifattoriali. In alcuni casi, condizioni di estrema povertà possono spingere individui a compiere atti disperati, anche per sostenere la propria famiglia.
-Allo stesso modo ci si può trovare a rubare quando non abbiamo una rete di supporto e stiamo attraversando un lungo periodo di indigenza.
-Non sempre chiaramente, alcuni potrebbero commettere questi atti per fanatismo o avidità.
-La povertà o più in generale la necessità possono favorire la criminalità, ma non sono la sola causa, esistono infatti paesi con un PIL basso, ma con altrettanto bassi livelli di criminalità come il Bhutan ad esempio.
-
-Tutto questo per dire che non basta semplicemente mettere più disincentivi per scoraggiare la criminalità, seppur sembri sufficiente, ma bisognerebbe capire l'origine del problema, crimine per crimine e capire come intervenire alla radice.
-
-Il carcere ad esempio si è spesso osservato essere una misura inefficace, infatti circa il 70\% dei detenuti, una volta scontata la pena, dopo un breve periodo di libertà, finirà nuovamente in detenzione. Non esiste infatti una correlazione tra numero di carceri o detenuti e sicurezza del paese. Il carcere quindi non è la misura migliore per rieducare le persone, ma è necessaria nel caso in cui un individuo possa essere pericoloso per gli altri.
-I Reati violenti si attestano sotto il 10\% in numerose stime, quindi per la maggioranza dei detenuti è possibile pensare a misure che possano davvero rieducarli.
-Qualcuno potrebbe dire: perché andrebbero aiutati? Anche egoisticamente la detenzione è un costo, quindi se riuscissimo a trasformare delle persone da spesa a contribuenti sarebbe l'ideale. Ogni anno le carceri costano tre miliardi di cui il 70\% va al personale interno e il 2\% a realtà esterne,
-assistenti sociali ecc…
-Nel libro "Abolire il carcere. Una ragionevole proposta per la sicurezza dei cittadini" \endnote{\raggedright\url{https://www.amazon.it/dp/8832964961}} si valutano alcune alternative come affidamento, servizi sociali e domiciliari, che hanno portato il tasso
-di recidività dal 70\% al 20\%. Anche chi esce con l'indulto ha meno probabilità di entrare nuovamente in carcere. 
-Uno dei motivi per cui il carcere ha un alta recidività, dipende anche dal non intervento delle cause che hanno portato quella persona a delinquere.
 Se una persona ruba perché non ha soldi, una volta uscita dal carcere si ritroverà nella stessa situazione.
-Se volesse cambiare vita potrebbe cercare un lavoro, ma negli anni di detenzione non avrà potuto ampliare il suo curriculum di esperienze lavorative e talvolta anche di istruzione. Inoltre, avere un buco nel curriculum è penalizzante nel trovare una occupazione. 
+Se volesse cambiare vita potrebbe cercare un lavoro, ma negli anni di detenzione non avrà potuto ampliare il suo curriculum di esperienze lavorative e talvolta anche di istruzione, che si è dimostrata correlata alla delinquenza\endnote{\raggedright\url{https://italiaindati.com/carceri-in-italia/}}.. Inoltre, avere un buco temporale nel curriculum è penalizzante nel trovare una occupazione. Un datore di lavoro, in fase di assunzione, potrebbe ritrarsi nel momento in cui venisse a conoscenze che il canditato è un ex carcerato.
 Se siamo senza una rete di supporto, più il tempo di disoccupazione aumenta, più le probabilità di ritornare a delinquere aumentano.
-In carcere succede che le persone, oltre alla libertà, vengono privati anche di affetti e intimità, in quanto andare
-a trovare un carcerato è piuttosto complicato, anche i parenti, iniziano a fare visita sempre meno. 
-Un individuo che ha vissuto in un ambiente ostile, tra guardie e detenuti, spesso esce dal carcere con un atteggiamento ancora più incattivito nei confronti del Sistema. Non solo cercherà di non farsi beccare la prossima volta, ma durante la detenzione potrebbe aver stretto legami con altre persone che gli hanno insegnato nuovi modi per delinquere.
-Possiamo fare un’altra scelta: possiamo trasformare la popolazione carceraria da costo a risorsa, impiegandola in lavori socialmente utili o in aziende agricole e artigiane, che spesso hanno bisogno di manodopera stagionale. In questo modo i detenuti vengono realmente reinseriti nella società, non isolati, imparano un mestiere e conoscono persone in grado di offrire una nuova possibilità.
-È anche così che si protegge la collettività: riducendo la recidiva e creando ponti tra il dentro e il fuori. Lo stress che le forze dell’ordine affrontano ogni giorno ci consente a noi di vivere serenamente, e per questo meritano rispetto. Il loro lavoro sarà ancora più efficace se sarà parte di un sistema che non si limita a punire, ma che educa, responsabilizza e reintegra.
+In carcere oltre della libertà, vengono privati anche di affetti e intimità, in quanto andare a trovare un carcerato è piuttosto complicato, anche i parenti, col tempo possono iniziare a fare visite sempre meno frequentemente. 
+Un individuo che ha vissuto in un ambiente ostile, tra guardie e detenuti, spesso esce dal carcere con un atteggiamento di sfiduciato nei confronti del Sistema. Non solo cercherà di non farsi beccare, ma durante la detenzione potrebbe aver stretto legami con altre persone e imparato nuovi modi per delinquere.
+Trasformare i carcerati da costo a risorsa, è possibile impiegandola in lavori socialmente utili o in aziende agricole e artigiane, che spesso hanno bisogno di manodopera stagionale. In questo modo i detenuti vengono reinseriti nella società, imparando un mestiere e conoscendo persone in grado di offrirgli possibilità.
 
-La pena dovrebbe essere commisurata al reato. Una persona
-che commette un reato economico generalmente dovrà essere punita economicamente, non con la libertà.
-Dico generalmente perché abbiamo casi in cui un truffatore rovina migliaia di famiglie o evasori fiscali seriali che sottraggono miliardi allo stato. Molti in questi casi sosterrebbero che il danno sociale è così vasto da meritare una pena detentiva.
+Diversi detenuti hanno una condanna per spaccio; alcuni sosterranno che queste persone non hanno aggredito o costretto qualcuno a fare qualcosa contro il loro volere, altri che stanno sfruttando vulnerabilità e debolezze di persone con delle dipendenze che graveranno poi sulla spesa sanitaria. Allo stesso modo però sostanze legali come tabacco e alcol impattano sulla sanità molto di più della cannabis, anche considerando la differenza di consumatori.
+Se si depenalizzassero le droghe leggere, la popolazione carceraria non violenta, calerebbe significativamente. Questo porterebbe ad avere meno processi, una giurisdizione più veloce ed efficiente e, costi minori. Il Portogallo ad esempio ha depenalizzato il consumo di tutte le droghe nel 2001, sia leggere che non, con ottimi risultati: Secondo un rapporto del 2017 dell'Institute of Labor Economics\endnote{\raggedright\url{https://www.iza.org/publications/dp/10895/going-after-the-addiction-not-the-addicted-the-impact-of-drug-decriminalization-in-portugal}}, la depenalizzazione “ha contribuito a un calo nel numero di sequestri di eroina e cocaina, una diminuzione del numero di reati e decessi per droga e una diminuzione del numero di pazienti che entrano in cura”. 
 
-Se si depenalizzassero le droghe leggere, la popolazione carceraria andrebbe a calare in quanto molti dei detenuti
-hanno una condanna per spaccio. Questo porterebbe ad avere meno processi e quindi una giurisdizione più veloce ed efficiente,
-ma anche più soldi da impegnare in attività di recupero del carcerato. Il Portogallo ad esempio ha depenalizzato il
-consumo di tutte le droghe nel 2001, sia leggere che non e, con ottimi risultati: Secondo un rapporto del 2017
-dell'Institute of Labor
-Economics\endnote{\raggedright\url{https://www.iza.org/publications/dp/10895/going-after-the-addiction-not-the-addicted-the-impact-of-drug-decriminalization-in-portugal}}, la depenalizzazione “ha contribuito a un calo nel numero di sequestri di eroina e cocaina, una diminuzione del
-numero di reati e decessi per droga e una diminuzione del numero di pazienti che entrano in cura”. 
 
-Oltre ad intervenire sul lavoro è importante lavorare sull'istruzione, in quanto correlata alla delinquenza\endnote{\raggedright\url{https://italiaindati.com/carceri-in-italia/}}.
 
-\begin{mdframed}[linewidth=1pt]
-Il riarmo favorisce la guerra o la pace?
 
-Le prospettive accademiche sulla correlazione tra la corsa agli armamenti e il favoreggiamento della guerra o della pace sono miste. Da un lato, una corsa agli armamenti è vista come un fattore che può aumentare il rischio di guerra esacerbando la tensione, la sfiducia e l'accumulo militare tra gli stati. Un esempio storico di tale dinamica è l'Europa precedente la Prima Guerra Mondiale. Questo meccanismo è spesso descritto come dilemma della sicurezza, dove gli sforzi di uno stato per accrescere la propria sicurezza finiscono per rendere paradossalmente meno sicuri gli altri, incrementando la probabilità di un conflitto \endnote{\raggedright\url{https://journals.sagepub.com/doi/10.1177/084387140401600188} } \endnote{\raggedright\url{http://www.medra.org/servlet/MRService?hdl=10.1402/14198} }.
 
-Dall'altro lato, alcune teorie della deterrenza sostengono che particolari corse agli armamenti, specialmente quelle che coinvolgono armi nucleari o un equilibrio di forze convenzionali, possano effettivamente contribuire alla pace. Questo accade creando scenari di distruzione mutua assicurata o stabilendo equilibri di potere che scoraggiano il conflitto diretto \endnote{\raggedright\url{https://www.semanticscholar.org/paper/33fcdac6b900c25feb502cce7604554dd82ad889} } \endnote{\raggedright\url{https://www.semanticscholar.org/paper/2188b0d615febc6c0acabcb1fc7265a588f8a0e3} }.
 
-Inoltre, analisi sociologiche e politiche sottolineano come la corsa agli armamenti comporti la deviazione di ingenti risorse verso la spesa militare, sottraendole a bisogni sociali o ambientali, il che può minare le prospettive di pace a lungo termine e la cooperazione globale \endnote{\raggedright\url{https://www.pagepress.org/socialsciences/ilpolitico/article/view/294} }.
-
-In sintesi, benché in specifici contesti le corse agli armamenti possano fungere da meccanismi di deterrenza, il consenso teorico e storico generale propende per l'idea che esse favoriscano maggiormente la guerra rispetto alla pace, alimentando ostilità, paura e competizione tra le nazioni. Si ritiene che una pace duratura e sostenibile sia promossa in modo più affidabile attraverso la cooperazione internazionale e gli accordi di controllo degli armamenti, piuttosto che da una competizione nell'accumulo militare.
-\end{mdframed}
-
-\begin{mdframed}[linewidth=1pt]
-Avere un'arma in casa ci rende più sicuri?
-
-Secondo numerosi studi, la risposta è negativa. Un'analisi di 15 studi ha rilevato che tenere un'arma da fuoco in casa quasi raddoppia la probabilità di essere assassinati. Uno studio della Emory University\endnote{\raggedright\url{https://journals.lww.com/jtrauma/Abstract/1998/08000/Injuries\_and\_Deaths\_Due\_to\_Firearms\_in\_the\_Home.10.aspx}}, condotto su 626 casi avvenuti in casa in tre città statunitensi (Memphis, Seattle e Galveston), ha osservato che gli spari accidentali sono quattro volte più frequenti di quelli per autodifesa, mentre quelli per compiere un'aggressione o un omicidio sono sette volte superiori, e undici volte più frequenti sono i colpi per suicidio. Secondo il Injury Control Research Center di Harvard, le armi sono usate per autodifesa in meno dell'1\% delle aggressioni con una vittima. John Donohue, economista della Stanford University, ha osservato nel 2017 che la riduzione dei requisiti per il porto d'armi in uno Stato porta a un aumento dei crimini violenti.
-
-In Italia, non esiste un rapporto ufficiale del Viminale sugli omicidi con armi da fuoco legalmente detenute, una mancanza significativa. Un’indagine svolta da Fire-Transcrime in collaborazione con l'Università Cattolica di Milano ha osservato che, nei paesi europei, gli omicidi con armi da fuoco tra il 2010 e il 2015 hanno causato vittime principalmente in ambito familiare (34\%) e interpersonale (32\%), mentre solo il 21\% è attribuibile a gruppi criminali organizzati, il 10\% ad atti criminali e il 3\% a motivi socio-politici. Questo suggerisce che in Europa, e presumibilmente anche in Italia, la maggior parte degli omicidi con armi da fuoco avviene in contesti familiari o interpersonali (66\%)\endnote{\raggedright\url{https://www.rivistailmulino.it/a/legittima-difesa-una-modifica-ingannevole-e-pericolosa}}.
-
-Prima di ipotizzare una legalizzazione più estesa della legittima difesa armata, sarebbe opportuno introdurre incentivi per l'installazione di sistemi di sicurezza passivi, come antifurti, videosorveglianza o dispositivi dissuasivi non letali. Questi strumenti, oltre a essere più sicuri, contribuiscono a prevenire i reati senza introdurre nuovi rischi all'interno delle abitazioni. Anche se nella ragione, è fondamentale evitare sempre lo scontro anchhe solo per evitare lunghe battaglie legali che possono superare le diverse migliaia di euro.
-
-In sintesi, gli studi suggeriscono che la presenza di armi in casa non aumenta la sicurezza personale, ma accresce il rischio di incidenti. Questi incidenti stanno portando a soluzioni creative come la PaintCam\endnote{\raggedright\url{https://www.kickstarter.com/projects/paintcam/paintcam-face-recognition-and-paintball-firing-security-system}} una videocamera di sorveglianza che spara vernice e lacrimogeni agli intrusi.
-\end{mdframed}
-
-\needspace{15cm}
-\begin{mdframed}[linewidth=1pt]
-\hyphenation{Dro-ga}
-\begin{wrapfigure}{i}{4.972cm}
-\includegraphics[width=4.972cm,height=7.287cm]{images/Libro-img054.jpg}
-\caption*{Di Mpv\_51 at English Wikipedia - Transferred from English Wikipedia, Pubblico dominio, \raggedright\url{https://commons.wikimedia.org/w/index.php?curid=546164} }
-\end{wrapfigure}
 
 Ginevra, in Svizzera, a fine degli anni 80 si è trovata ad affrontare una crisi sanitaria legata al consumo di eroina e dell'HIV. Le due
 strade percorribili al fine di risolvere questo problema, principalmente sono due, liberalizzazione o repressione. Ginevra ha scelto la
@@ -3779,9 +3723,27 @@ con la complicità di un adulto, che gli presterà un documento, potrà acquista
 solo con l'approvazione di un adulto. Nel caso della marijuana un minorenne può comprarla senza
 nessun vincolo o complicità di un adulto. Quindi con il sistema attuale i minorenni hanno un accesso più complicato
 a sostanze controllate e un accesso facilitato a sostanze di cui non c'è controllo della qualità.
-\end{mdframed}
 
-\begin{mdframed}[linewidth=1pt]
+Armi e sicurezza
+
+Un'analisi di 15 studi ha rilevato che tenere un'arma da fuoco in casa, quasi raddoppia la probabilità di essere assassinati. Uno studio della Emory University\endnote{\raggedright\url{https://journals.lww.com/jtrauma/Abstract/1998/08000/Injuries\_and\_Deaths\_Due\_to\_Firearms\_in\_the\_Home.10.aspx}}, condotto su 626 casi avvenuti in casa, ha osservato che gli spari accidentali sono quattro volte più frequenti di quelli per autodifesa, mentre quelli per compiere un'aggressione o un omicidio sono sette volte superiori, e undici volte più frequenti sono i colpi per suicidio. Secondo il Injury Control Research Center di Harvard, le armi sono usate per autodifesa in meno dell'1\% delle aggressioni con una vittima. John Donohue, economista della Stanford University, ha osservato nel 2017 che la riduzione dei requisiti per il porto d'armi in uno Stato porta a un aumento dei crimini violenti.
+
+In Italia, non esiste un rapporto ufficiale del Viminale sugli omicidi con armi da fuoco legalmente detenute, una mancanza significativa. Un’indagine svolta da Fire-Transcrime in collaborazione con l'Università Cattolica di Milano ha osservato che, nei paesi europei, gli omicidi con armi da fuoco tra il 2010 e il 2015 hanno causato vittime principalmente in ambito familiare (34\%) e interpersonale (32\%), mentre solo il 21\% è attribuibile a gruppi criminali organizzati, il 10\% ad atti criminali e il 3\% a motivi socio-politici. Questo suggerisce che in Europa, e presumibilmente anche in Italia, la maggior parte degli omicidi con armi da fuoco avviene in contesti familiari o interpersonali (66\%)\endnote{\raggedright\url{https://www.rivistailmulino.it/a/legittima-difesa-una-modifica-ingannevole-e-pericolosa}}.
+
+Prima di ipotizzare una legalizzazione più estesa della legittima difesa armata, sarebbe opportuno introdurre incentivi per l'installazione di sistemi di sicurezza passivi, come antifurti, videosorveglianza o dispositivi dissuasivi non letali. Questi strumenti, oltre a essere più sicuri, contribuiscono a prevenire i reati senza introdurre nuovi rischi all'interno delle abitazioni. Anche se nella ragione, è fondamentale evitare sempre lo scontro anchhe solo per evitare lunghe battaglie legali che possono superare le diverse migliaia di euro.
+
+In sintesi, gli studi suggeriscono che la presenza di armi in casa non aumenta la sicurezza personale, ma accresce il rischio di incidenti. Questi incidenti stanno portando a soluzioni creative come la PaintCam\endnote{\raggedright\url{https://www.kickstarter.com/projects/paintcam/paintcam-face-recognition-and-paintball-firing-security-system}} una videocamera di sorveglianza che spara vernice e lacrimogeni agli intrusi.
+
+Il riarmo favorisce la guerra o la pace?
+
+Le prospettive accademiche sulla correlazione tra la corsa agli armamenti e il favoreggiamento della guerra o della pace sono miste. Da un lato, una corsa agli armamenti è vista come un fattore che può aumentare il rischio di guerra esacerbando la tensione, la sfiducia e l'accumulo militare tra gli stati\endnote{\raggedright\url{https://journals.sagepub.com/doi/10.1177/084387140401600188}} \endnote{\raggedright\url{http://www.medra.org/servlet/MRService?hdl=10.1402/14198}}.
+
+Dall'altro lato, alcune teorie della deterrenza sostengono che particolari corse agli armamenti, specialmente quelle che coinvolgono armi nucleari o un equilibrio di forze convenzionali, possano contribuire alla pace \endnote{\raggedright\url{https://www.semanticscholar.org/paper/33fcdac6b900c25feb502cce7604554dd82ad889}} \endnote{\raggedright\url{https://www.semanticscholar.org/paper/2188b0d615febc6c0acabcb1fc7265a588f8a0e3}}.
+
+Inoltre, analisi sociologiche e politiche sottolineano come la corsa agli armamenti comporti la deviazione di ingenti risorse verso la spesa militare, sottraendole a bisogni sociali o ambientali, il che può minare le prospettive di pace a lungo termine e la cooperazione globale \endnote{\raggedright\url{https://www.pagepress.org/socialsciences/ilpolitico/article/view/294}}.
+
+In sintesi, benché in specifici contesti il riarmo possa fungere da meccanismo di deterrenza, in generale esso favorisce maggiormente la guerra rispetto alla pace. Si ritiene che una pace duratura e sostenibile sia promossa in modo più affidabile attraverso la cooperazione internazionale e gli accordi di controllo degli armamenti, piuttosto che da una competizione nell'accumulo militare.
+
 La caccia è utile?
 
 La caccia, inizialmente nata con l'obiettivo della sopravvivenza è diventata ai giorni nostri uno
@@ -3868,7 +3830,6 @@ Tutto questo discorso non è per demonizzare l'abbattimento di animali come form
 Molte più vittime dipendono dalla caccia in sé. Dal 2011 al 2021
 (con una pandemia di mezzo che ha ridotto l'attività venatoria), i morti umani per colpa della caccia sono stati 209 con 682 i feriti, questo è ciò che emerge dai dati raccolti da vittimedellacaccia.org. La maggioranza delle vittime sono stati cacciatori, ma ci sono stati casi di gente che stava passeggiando nei boschi e
 addirittura persone colpite mentre erano dentro casa loro. 
-\end{mdframed}
 
 \subsection{Lavoro e scuola}
 Siamo portati a pensare che, per colpa dello Stato non
