--- a/Libro.tex
+++ b/Libro.tex
@@ -3694,77 +3694,37 @@ Trasformare i carcerati da costo a risorsa, è possibile impiegandola in lavori 
 Diversi detenuti hanno una condanna per spaccio; alcuni sosterranno che queste persone non hanno aggredito o costretto qualcuno a fare qualcosa contro il loro volere, altri che stanno sfruttando vulnerabilità e debolezze di persone con delle dipendenze che graveranno poi sulla spesa sanitaria. Allo stesso modo però sostanze legali come tabacco e alcol impattano sulla sanità molto di più della cannabis, anche considerando la differenza di consumatori.
 Se si depenalizzassero le droghe leggere, la popolazione carceraria non violenta, calerebbe significativamente. Questo porterebbe ad avere meno processi, una giurisdizione più veloce ed efficiente e, costi minori. Il Portogallo ad esempio ha depenalizzato il consumo di tutte le droghe nel 2001, sia leggere che non, con ottimi risultati: Secondo un rapporto del 2017 dell'Institute of Labor Economics\endnote{\raggedright\url{https://www.iza.org/publications/dp/10895/going-after-the-addiction-not-the-addicted-the-impact-of-drug-decriminalization-in-portugal}}, la depenalizzazione “ha contribuito a un calo nel numero di sequestri di eroina e cocaina, una diminuzione del numero di reati e decessi per droga e una diminuzione del numero di pazienti che entrano in cura”. 
 
+Non é mai esistito nella storia uno stato che sia riuscito ad eliminarea droga,l'unica strada è gestirla. A Ginevra i tossicodipendenti che non riescono a guarire dalla dipendenza dopo due tentativi di disintossicazione, possono accedere a un programma dove gli viene fornita eroina pura. L'eroina del mercato nero è mischiata con sostanze tossiche che costringono a cercare fino a 8 dosi al giorno solo per non stare male. L'eroina pura ha un effetto stabile e prolungato, nascendo come farmaco della Bayer (quella dell'aspirina), riducendo le somministrazioni a 2 al giorno. Di conseguenza, il paziente non vive più in uno stato di astinenza perenne, tenendolo lontano da furti per la sua dose e, lasciandogli il tempo per mantenere un impiego.
+L'efficacia di questo approccio è supportata da decenni di ricerca scientifica \endnote{Studio Svizzero Pro-Pet (1994-1996): È lo studio pionieristico condotto dall'Ufficio Federale della Sanità Pubblica che ha dimostrato una riduzione massiccia della criminalità (circa l'80\% in meno di reati commessi dai partecipanti) e un aumento significativo del tasso di occupazione lavorativa.} \endnote{Revisione Cochrane (2011/2012): Una "meta-analisi" (uno studio che ne esamina molti altri) condotta da Ferri, Davoli e Perucci ha concluso che il trattamento assistito con eroina è più efficace del metadone nel mantenere in cura i pazienti "difficili" e nel ridurre l'uso di sostanze illegali.} \endnote{Studio RIOTT (Regno Unito, 2010): Pubblicato su The Lancet, ha confermato che i pazienti trattati con eroina iniettabile pura hanno ridotto drasticamente il consumo di droga di strada rispetto a quelli trattati con metadone orale, migliorando nettamente la loro stabilità sociale.} \endnote{Studio NAOMI (Canada, 2009): Pubblicato sul New England Journal of Medicine, ha evidenziato come l'eroina medicale sia non solo sicura, ma superiore ad altri trattamenti per migliorare la ritenzione in cura e la salute generale dei tossicodipendenti cronici.}
+ 
+L'attuale sistema di controllo rende paradossalmente più facile per un minorenne acquistare qualsiasi droga rispetto a tabacco o alcol, poiché per questi ultimi è necessaria la complicità di un adulto, come la tessera sanitaria ai distributori automatici. Per l'acquisto di droghe un minorenne può muoversi in autonomia trovando uno spacciatore adulto o meno.
+
+Tra le varie proposte per aumentare la sicurezza si parla anche di legittima difesa.
+Un'analisi di 15 studi ha rilevato che tenere un'arma da fuoco in casa, quasi raddoppia la probabilità di essere assassinati. Uno studio della Emory University\endnote{\raggedright\url{https://journals.lww.com/jtrauma/Abstract/1998/08000/Injuries\_and\_Deaths\_Due\_to\_Firearms\_in\_the\_Home.10.aspx}}, condotto su 626 casi avvenuti in casa, ha osservato che gli spari accidentali sono quattro volte più frequenti di quelli per autodifesa e, undici volte i colpi per suicidio. Secondo il Injury Control Research Center di Harvard, le armi sono usate per autodifesa in meno dell'1\% delle aggressioni con una vittima. John Donohue, economista della Stanford University, ha osservato nel 2017 che la riduzione dei requisiti per il porto d'armi in uno Stato porta a un aumento dei crimini violenti.
+
+In Italia, non esiste un rapporto ufficiale del Viminale sugli omicidi con armi da fuoco legalmente detenute, una mancanza significativa. Un’indagine svolta da Fire-Transcrime in collaborazione con l'Università Cattolica di Milano ha osservato che, nei paesi europei e, presumibilmente anche in Italia, gli omicidi con armi da fuoco tra il 2010 e il 2015 hanno causato vittime principalmente in ambito familiare (34\%) e interpersonale (32\%), mentre solo il 21\% è attribuibile a gruppi organizzati, il 10\% ad atti criminali e il 3\% a motivi socio-politici\endnote{\raggedright\url{https://www.rivistailmulino.it/a/legittima-difesa-una-modifica-ingannevole-e-pericolosa}}.
+
+Prima di ipotizzare una legalizzazione più estesa della legittima difesa armata, sarebbe opportuno introdurre incentivi per l'installazione di sistemi di sicurezza passivi, come antifurti, videosorveglianza, dispositivi dissuasivi non letali, o soluzioni creative come la PaintCam\endnote{\raggedright\url{https://www.kickstarter.com/projects/paintcam/paintcam-face-recognition-and-paintball-firing-security-system}} una videocamera di sorveglianza che spara vernice e lacrimogeni agli intrusi. Questi strumenti, oltre a essere più sicuri, contribuiscono a prevenire i reati senza introdurre nuovi rischi all'interno delle abitazioni. 
+
+Passando dal livello privato a quello nazionale, le prospettive accademiche sulla correlazione tra la corsa agli armamenti e il favoreggiamento della guerra o della pace sono miste. Da un lato, una corsa agli armamenti è vista come un fattore che può aumentare il rischio di guerra esacerbando la tensione, la sfiducia e l'accumulo militare tra gli stati\endnote{\raggedright\url{https://journals.sagepub.com/doi/10.1177/084387140401600188}} \endnote{\raggedright\url{http://www.medra.org/servlet/MRService?hdl=10.1402/14198}}.
+
+La corsa agli armamenti, inoltre, comporta la deviazione di ingenti risorse verso la spesa militare, sottraendole a bisogni sociali o ambientali, il che può minare le prospettive di pace a lungo termine e la cooperazione globale \endnote{\raggedright\url{https://www.pagepress.org/socialsciences/ilpolitico/article/view/294}}.
+
+Dall'altro lato, alcune teorie sulla deterrenza sostengono che particolari corse agli armamenti, specialmente quelle che coinvolgono armi nucleari o un equilibrio di forze convenzionali, possano contribuire alla pace \endnote{\raggedright\url{https://www.semanticscholar.org/paper/33fcdac6b900c25feb502cce7604554dd82ad889}} \endnote{\raggedright\url{https://www.semanticscholar.org/paper/2188b0d615febc6c0acabcb1fc7265a588f8a0e3}}. 
+
+In sintesi, benché in specifici contesti il riarmo possa fungere da meccanismo di deterrenza, in generale favorisce maggiormente la guerra rispetto alla pace. Si ritiene che una pace duratura e sostenibile sia promossa in modo più affidabile attraverso la cooperazione internazionale e gli accordi di controllo degli armamenti, piuttosto che da una competizione nell'accumulo militare.
 
 
 
 
 
-
-Ginevra, in Svizzera, a fine degli anni 80 si è trovata ad affrontare una crisi sanitaria legata al consumo di eroina e dell'HIV. Le due
-strade percorribili al fine di risolvere questo problema, principalmente sono due, liberalizzazione o repressione. Ginevra ha scelto la
-prima strada, in una maniera più attiva di altri esempi che abbiamo sparsi per il mondo. Hanno compreso che l’eliminazione totale della droga non è realistico, e si sono focalizzati su misure pragmatiche di riduzione del danno. 
-Il loro obiettivo non è rimuovere la droga, ma tutte le problematiche che ruotano
-attorno ad essa come violenza e salute. Così è stata adibita una struttura dove gli vengono fornite siringe nuove,
-preservativi e assistenza medica. Nel 1898 la Bayer sintetizzò e brevettò la diacetilmorfina (heroin), vendendola inizialmente come rimedio medico, incluso in contesti pediatrici. Veniva esportata in 23 paesi di tutto il mondo. Quando si resero conto della fortissima
-dipendenza che dava il farmaco venne ritirato dal commercio lasciando però un sacco di persone dipendenti che
-continuarono a ricercarla sul mercato nero, dove però la purezza arriva al massimo al 15\% il resto è tutto “taglio”
-tra cui può essere fatto con pezzi di intonaco, terra, calmanti. L'eroina pura ha un effetto molto potente e dura qualche ora, così si può ridurre il consumo a una volta al giorno. Lo stato non rende dipendenti le persone da questa sostanza, quando arrivano in questi centri lo sono già. Rispetto alla
-situazione in cui arrivano, ovvero dipendenti e con rischio di prendere infezioni e di logorare il loro organismo, loro
-cercano di rimuovere questi problemi correlati, tranne la dipendenza. I requisiti sono l'aver provato almeno due trattamenti in passato che però non hanno funzionato. I trattamenti possono essere la disintossicazione, il metadone o altre sostanze. I pazienti raccontano che prima si facevano anche sette o otto volte al giorno, ora, con l'eroina
-pura basta una sola volta. Se una persona fa uso di una sostanza otto volte al giorno, tutta la giornata è impiegata
-nella ricerca della sostanza non lasciandogli tempo per fare altro. Riducendo il consumo a una sola volta invece possono
-andare a lavoro e avere il resto della giornata per condurre una vita normale. Questo è solo uno dei tanti benefici, gli altri sono: diminuzione criminalità, diminuzione dell'HIV e di altre infezioni, e miglioramenti della salute mentale. Inoltre, anche se allo stato non interessasse della salute dei tossicodipendenti, ma solo di spendere meno soldi, questa potrebbe essere una scelta efficace, siccome costa meno pagare l'eroina
-che pagare le spese mediche per curarli quando arrivano troppo malati, con l'HIV o altre infezioni, oltre a tutti i problemi legati alla violenza. La società è piena di droghe più dannose e che danno dipendenza, come l'alcol, il
-tabacco, le medicine, antidolorifici, psicofarmaci. Non è vero che una cosa legale fa meno male di una non legale.
-In alcuni paesi che hanno depenalizzato o regolamentato droghe, come il Portogallo, hanno studi che mostrano come i tassi di consumo non sono cresciuti e in alcuni casi sono diminuiti leggermente, ma i risultati variano tra contesti e classi di sostanze. 
-Questo potrebbe avere un effetto positivo anche sui giovani. Se prendiamo ad esempio le sigarette, un
-minorenne non può comprarle, l'unica cosa che può fare è recarsi ad un distributore automatico e,
-con la complicità di un adulto, che gli presterà un documento, potrà acquistarle. Nel caso dell'alcol è più difficile ancora, siccome il controllo dell'identità passa da un essere umano e non da una macchina. Anche qua, un minorenne può accedere a questa sostanza, ma
-solo con l'approvazione di un adulto. Nel caso della marijuana un minorenne può comprarla senza
-nessun vincolo o complicità di un adulto. Quindi con il sistema attuale i minorenni hanno un accesso più complicato
-a sostanze controllate e un accesso facilitato a sostanze di cui non c'è controllo della qualità.
-
-Armi e sicurezza
-
-Un'analisi di 15 studi ha rilevato che tenere un'arma da fuoco in casa, quasi raddoppia la probabilità di essere assassinati. Uno studio della Emory University\endnote{\raggedright\url{https://journals.lww.com/jtrauma/Abstract/1998/08000/Injuries\_and\_Deaths\_Due\_to\_Firearms\_in\_the\_Home.10.aspx}}, condotto su 626 casi avvenuti in casa, ha osservato che gli spari accidentali sono quattro volte più frequenti di quelli per autodifesa, mentre quelli per compiere un'aggressione o un omicidio sono sette volte superiori, e undici volte più frequenti sono i colpi per suicidio. Secondo il Injury Control Research Center di Harvard, le armi sono usate per autodifesa in meno dell'1\% delle aggressioni con una vittima. John Donohue, economista della Stanford University, ha osservato nel 2017 che la riduzione dei requisiti per il porto d'armi in uno Stato porta a un aumento dei crimini violenti.
-
-In Italia, non esiste un rapporto ufficiale del Viminale sugli omicidi con armi da fuoco legalmente detenute, una mancanza significativa. Un’indagine svolta da Fire-Transcrime in collaborazione con l'Università Cattolica di Milano ha osservato che, nei paesi europei, gli omicidi con armi da fuoco tra il 2010 e il 2015 hanno causato vittime principalmente in ambito familiare (34\%) e interpersonale (32\%), mentre solo il 21\% è attribuibile a gruppi criminali organizzati, il 10\% ad atti criminali e il 3\% a motivi socio-politici. Questo suggerisce che in Europa, e presumibilmente anche in Italia, la maggior parte degli omicidi con armi da fuoco avviene in contesti familiari o interpersonali (66\%)\endnote{\raggedright\url{https://www.rivistailmulino.it/a/legittima-difesa-una-modifica-ingannevole-e-pericolosa}}.
-
-Prima di ipotizzare una legalizzazione più estesa della legittima difesa armata, sarebbe opportuno introdurre incentivi per l'installazione di sistemi di sicurezza passivi, come antifurti, videosorveglianza o dispositivi dissuasivi non letali. Questi strumenti, oltre a essere più sicuri, contribuiscono a prevenire i reati senza introdurre nuovi rischi all'interno delle abitazioni. Anche se nella ragione, è fondamentale evitare sempre lo scontro anchhe solo per evitare lunghe battaglie legali che possono superare le diverse migliaia di euro.
-
-In sintesi, gli studi suggeriscono che la presenza di armi in casa non aumenta la sicurezza personale, ma accresce il rischio di incidenti. Questi incidenti stanno portando a soluzioni creative come la PaintCam\endnote{\raggedright\url{https://www.kickstarter.com/projects/paintcam/paintcam-face-recognition-and-paintball-firing-security-system}} una videocamera di sorveglianza che spara vernice e lacrimogeni agli intrusi.
-
-Il riarmo favorisce la guerra o la pace?
-
-Le prospettive accademiche sulla correlazione tra la corsa agli armamenti e il favoreggiamento della guerra o della pace sono miste. Da un lato, una corsa agli armamenti è vista come un fattore che può aumentare il rischio di guerra esacerbando la tensione, la sfiducia e l'accumulo militare tra gli stati\endnote{\raggedright\url{https://journals.sagepub.com/doi/10.1177/084387140401600188}} \endnote{\raggedright\url{http://www.medra.org/servlet/MRService?hdl=10.1402/14198}}.
-
-Dall'altro lato, alcune teorie della deterrenza sostengono che particolari corse agli armamenti, specialmente quelle che coinvolgono armi nucleari o un equilibrio di forze convenzionali, possano contribuire alla pace \endnote{\raggedright\url{https://www.semanticscholar.org/paper/33fcdac6b900c25feb502cce7604554dd82ad889}} \endnote{\raggedright\url{https://www.semanticscholar.org/paper/2188b0d615febc6c0acabcb1fc7265a588f8a0e3}}.
-
-Inoltre, analisi sociologiche e politiche sottolineano come la corsa agli armamenti comporti la deviazione di ingenti risorse verso la spesa militare, sottraendole a bisogni sociali o ambientali, il che può minare le prospettive di pace a lungo termine e la cooperazione globale \endnote{\raggedright\url{https://www.pagepress.org/socialsciences/ilpolitico/article/view/294}}.
-
-In sintesi, benché in specifici contesti il riarmo possa fungere da meccanismo di deterrenza, in generale esso favorisce maggiormente la guerra rispetto alla pace. Si ritiene che una pace duratura e sostenibile sia promossa in modo più affidabile attraverso la cooperazione internazionale e gli accordi di controllo degli armamenti, piuttosto che da una competizione nell'accumulo militare.
 
 La caccia è utile?
 
-La caccia, inizialmente nata con l'obiettivo della sopravvivenza è diventata ai giorni nostri uno
-strumento per controllare che una specie animale non diventi troppo presente e, anche, per fini ludici. Gli animalisti
-da anni si battono contro questa pratica, ma se sparisse, il numero di certi animali crescerebbe fuori controllo? In
-Italia, uno degli animali che crea più preoccupazione sotto questo punto di vista è il cinghiale. Secondo
-dati ISPRA (Istituto superiore per la protezione e la ricerca ambientale) i cinghiali sono raddoppiati in 10 anni,
-passando da 500 mila del 2010 a 1 milione nel 2020 nonostante il numero dei cacciatori sia stabile dal
-1980\endnote{\raggedright\url{https://www.researchgate.net/publication/269636662\_Wild\_boar\_populations\_up\_numbers\_of\_hunters\_down\_A\_review\_of\_trends\_and\_implications\_for\_Europe}}. In alcuni casi, la pressione venatoria può paradossalmente contribuire all’aumento della popolazione di cinghiali, soprattutto quando altera la struttura sociale e favorisce una riproduzione anticipata o più intensa.
+La caccia, attualmente è utilizzata per fini ludici e per contenere la popolazione di animali. In Italia, uno degli animali che crea più preoccupazione è il cinghiale. Secondo dati ISPRA i cinghiali sono raddoppiati in 10 anni, passando da 500 mila del 2010 a 1 milione nel 2020 nonostante il numero dei cacciatori sia stabile dal
+1980\endnote{\raggedright\url{https://www.researchgate.net/publication/269636662\_Wild\_boar\_populations\_up\_numbers\_of\_hunters\_down\_A\_review\_of\_trends\_and\_implications\_for\_Europe}}. 
 
-Il cinghiale vive in gruppi familiari matriarcali guidati da una vecchia femmina, chiamata matrona, che vive in un
-territorio più ampio di un grande maschio dominante detto salengano. In alcune condizioni ecologiche e sociali, i cinghiali mostrano una gerarchia che può limitare la riproduzione alle femmine dominanti, ma è stato osservato che anche femmine subalterne e giovani possono contribuire alla riproduzione, soprattutto in contesti favorevoli.
-Queste condizioni normali vengono alterate dalla caccia, siccome le matrone e il salengano sono i primi a morire in
-quanto impegnati a far scappare giovani e cuccioli. In queste condizioni alterate dalla caccia, l'assenza delle figure dominanti, come le matrone e i salengani, può indebolire le strutture sociali consolidate. Questo può ridurre il controllo riproduttivo naturale, portando un numero maggiore di individui subalterni, compresi i maschi più giovani, a contribuire alla riproduzione. Inizia così una fase
-riproduttiva intensa, che vista la giovane età, può moltiplicare rapidamente la popolazione. 
-A confermarlo indirettamente sono gli stessi cacciatori, che tra le regole stilate e che normano la
-cosiddetta “caccia di selezione” c'è una logica piramidale che prevede di uccidere in misura maggiore gli individui più
-anziani e in misura minore i giovani e cuccioli, svecchiando così la popolazione di ungulati, lasciando in maggioranza
-la fascia di età più fertile\endnote{\raggedright\url{https://www.fondazioneuna.org/news/guida-alla-caccia-di-selezione/}}.
-
-Ho individuato 26 studi che esplorano i legami tra pressione venatoria, struttura sociale dei cinghiali e dinamiche riproduttive; alcuni suggeriscono un effetto imprevisto della caccia sulla crescita demografica\endnote{\par 1) Apollonio M., R. Putman, S. Grignolio \& L. Bartoš 2011. Hunting seasons in relation to
+Il cinghiale vive in gruppi familiari matriarcali, dove generalmente solo i due individui dominanti si riproducono. In una battuta si caccia questi individui sono i primi a morire, in quanto impegnati a far scappare giovani e cuccioli. In queste condizioni alterate dalla caccia, l'assenza delle figure dominanti, possono portare ad un numero maggiore di individui subalterni alla riproduzione. Inizia così una fase riproduttiva intensa, che vista la giovane età, può moltiplicare rapidamente la popolazione\endnote{\par 1) Apollonio M., R. Putman, S. Grignolio \& L. Bartoš 2011. Hunting seasons in relation to
 biological breeding seasons and the implications for the control or regulation of ungulate populations. In: M.
 Apollonio, R. Andersen \& R. Putman (eds.), Ungulate management in Europe: Problems and practices, Cambridge University
 Press, London, UK: 80-105.\par 2) Cahill S. \& D. Llimona 2004. Demographics of a wild boar Sus scrofa Linnaeus, 1758
@@ -3808,21 +3768,19 @@ boar under high hunting pressure. J. animal ecology 78 (6): 1278-1290.\par 24) T
 Servanty, J.-M. Gaillard, S. Brandt \& E. Baubet 2008. Disentangling natural from hunting mortality in an intensively
 hunted wild boar population. J. Wildlife Management 72 (7): 1532-1539.\par 26) Scillitani L., A. Monaco \& S. Toso
 2010. Do intensive drive hunts affect wild boar (Sus scrofa) spatial behaviour in Italy? Some evidences and management
-implications. European Journal of Wildlife Research 56 (3): 307–318. }. Sebbene esistano posizioni che sostengono l'utilità della caccia per il controllo numerico, le evidenze che ho riscontrato mettono in luce soprattutto il ruolo dei cacciatori nei censimenti, piuttosto che una chiara efficacia nel contenere la crescita delle popolazioni. 
+implications. European Journal of Wildlife Research 56 (3): 307–318. }. 
 
-Se così fosse, quello che ne resta è lo scopo ludico che però, a fronte di un danno
-ambientale così importante, è difficilmente giustificabile. Immagino sia stimolante seguire le tracce, stanare la preda, ma è
-possibile farlo anche senza un fucile, tanti, con l'aumento di popolarità della fotografia, preferiscono questa modalità per non rinunciare all'aspetto ludico.
+In condizioni favorevoli, alcuni ecosistemi mostrano una buona capacità di resilienza, ma il ritorno a un equilibrio ecologico non è garantito né sempre spontaneo. In Italia negli ultimi anni si sta assistendo a una ricomparsa del lupo, unico predatore dei grandi ungulati e non solo, infatti questo animale è utile al contenimento di altre specie invasive come le nutrie. 
+Servirà diverso tempo prima che i lupi possano formare branchi numerosi in grado di cacciare grandi prede selvatiche, portandoli in alcuni casi a rivolgersi a più facili prede domestiche, dalle pecore ai piccoli cani. In un ecosistema in equilibrio, la densità dei carnivori tende ad autoregolarsi in funzione delle prede disponibili.
 
-Quindi quali soluzioni ci possono essere? Come spesso accade in questi casi, In condizioni favorevoli, alcuni ecosistemi mostrano una buona capacità di resilienza, ma il ritorno a un equilibrio ecologico non è garantito né sempre spontaneo. In Italia negli ultimi anni si sta assistendo a una ricomparsa del
-lupo, unico predatore dei grandi ungulati e non solo, infatti questo animale è utile al contenimento di altre specie invasive come le nutrie. Possiamo trovare un virtuoso esempio del Parco
-Nazionale del Gran Paradiso che sta reintroducendo il lupo proprio per la sua azione predatoria utile nel controllo
-numerico dei cinghiali. Uno dei problemi che ha portato alla crescita esponenziale dei cinghiali è stata proprio la
-caccia smisurata del lupo in passato che l'ha quasi portato alla sua estinzione.
-L’abbattimento non selettivo dei lupi può portare alla dispersione del branco, così i singoli individui, senza l'appoggio degli altri esemplari, non riescono più a cacciare alcune grandi prede selvatiche, portandoli in alcuni casi a rivolgersi a più facili prede domestiche, dalle
-pecore ai piccoli cani. In un ecosistema in equilibrio, la densità dei carnivori tende ad autoregolarsi in funzione delle risorse disponibili, ma in contesti alterati questo equilibrio può essere compromesso.
 
-Sembra che la legge in questo ambito sia orientata a tutelare l'attività venatoria più che l'equilibrio naturale, infatti, gli agricoltori, se cacciatori, possono abbattere animali sorpresi nei loro campi per tutto l'anno, anche fuori i periodi di caccia, ma non hanno l'obbligo di creare recinti elettrificati (disposti in maniera corretta) che si sono dimostrati negli anni molto efficaci per la protezione del bestiame. Le misure di protezione del bestiame, come recinti elettrificati e cani pastore, risulterebbero comunque necessarie, non solo per mitigare l'impatto dei predatori come il lupo. Una ricerca del Wwf condotta in Svizzera ha riportato che i lupi ogni anno uccidono circa 200 esemplari. In confronto, ogniestate negli alpeggi muoiono per malattia o cadute dai precipizi circa 4000 pecore perché non sufficientemente sorvegliate. Anche i dissuasori elettronici, lungo le strade boschive hanno dimostrato la loro efficacia nella riduzione degli incidenti stradali.
+
+
+
+
+
+
+Sembra che la legge in questo ambito sia orientata a tutelare l'attività venatoria più che l'equilibrio naturale, infatti, gli agricoltori, se cacciatori, possono abbattere animali sorpresi nei loro campi per tutto l'anno, anche fuori i periodi di caccia, ma non hanno l'obbligo di creare recinti elettrificati (disposti in maniera corretta) che si sono dimostrati negli anni molto efficaci per la protezione del bestiame. Una ricerca del Wwf condotta in Svizzera ha osservato che i lupi ogni anno uccidono circa 200 esemplari. In confronto, ogni estate negli alpeggi muoiono per malattia o cadute dai precipizi circa 4000 pecore perché non sufficientemente sorvegliate. Anche i dissuasori elettronici, lungo le strade boschive hanno dimostrato la loro efficacia nella riduzione degli incidenti stradali.
 
 La vera paura però, non è quella che il lupo attacchi il bestiame, ma che attacchi l'uomo. Il lupo però è un animale schivo e ha paura dell'uomo. L'ultimo attacco ad una persona da parte di un lupo, in Italia, risale al 1800, tuttavia, a partire dal 2020 si sono verificati casi di ferimenti, tra cui una bambina di 11 anni in provincia di Chieti (2023) e un bambino vicino Roma (2024). Il problema maggiore è rappresentado dai cosidetti lupi confidenti, ovvero quelli che si sono abituati alla presenza dell'uomo. in Italia I lupi confidenti hanno fatto registrare sei dei sette attacchi all'essere umano ed è anche per queste ragioni che è importante non dar loro da mangiare o più in generale confidenza. Quando si arriva a queste situazioni è difficile tornare indietro e spesso le uniche soluzioni sono l'abbattimento o la cattività.
 Per quanto riguarda gli orsi, in Italia si sono registrati 6 aggressioni di cui sono una mortale e, in Europa 19 in 15 anni di cui nessuna mortale. In caso di aggressione gli esperti consigliano di stare fermi parlando in modo pacato e di portare con sé uno spray urticante. Discorso analogo per i cinghiali che al di fuori degli incidenti stradali non hanno provocato vittime.
