--- a/Libro.tex
+++ b/Libro.tex
@@ -3773,52 +3773,33 @@ implications. European Journal of Wildlife Research 56 (3): 307–318. }.
 In condizioni favorevoli, alcuni ecosistemi mostrano una buona capacità di resilienza, ma il ritorno a un equilibrio ecologico non è garantito né sempre spontaneo. In Italia negli ultimi anni si sta assistendo a una ricomparsa del lupo, unico predatore dei grandi ungulati e non solo, infatti questo animale è utile al contenimento di altre specie invasive come le nutrie. 
 Servirà diverso tempo prima che i lupi possano formare branchi numerosi in grado di cacciare grandi prede selvatiche, portandoli in alcuni casi a rivolgersi a più facili prede domestiche, dalle pecore ai piccoli cani. In un ecosistema in equilibrio, la densità dei carnivori tende ad autoregolarsi in funzione delle prede disponibili.
 
+Una ricerca del Wwf condotta in Svizzera ha osservato che i lupi ogni anno uccidono circa 200 pecore non protette da recinto elettrificato e, ne muoiono per malattia o cadute dai precipizi circa 4000 perché non sorvegliate. 
 
-
-
-
-
-
-
-Sembra che la legge in questo ambito sia orientata a tutelare l'attività venatoria più che l'equilibrio naturale, infatti, gli agricoltori, se cacciatori, possono abbattere animali sorpresi nei loro campi per tutto l'anno, anche fuori i periodi di caccia, ma non hanno l'obbligo di creare recinti elettrificati (disposti in maniera corretta) che si sono dimostrati negli anni molto efficaci per la protezione del bestiame. Una ricerca del Wwf condotta in Svizzera ha osservato che i lupi ogni anno uccidono circa 200 esemplari. In confronto, ogni estate negli alpeggi muoiono per malattia o cadute dai precipizi circa 4000 pecore perché non sufficientemente sorvegliate. Anche i dissuasori elettronici, lungo le strade boschive hanno dimostrato la loro efficacia nella riduzione degli incidenti stradali.
-
-La vera paura però, non è quella che il lupo attacchi il bestiame, ma che attacchi l'uomo. Il lupo però è un animale schivo e ha paura dell'uomo. L'ultimo attacco ad una persona da parte di un lupo, in Italia, risale al 1800, tuttavia, a partire dal 2020 si sono verificati casi di ferimenti, tra cui una bambina di 11 anni in provincia di Chieti (2023) e un bambino vicino Roma (2024). Il problema maggiore è rappresentado dai cosidetti lupi confidenti, ovvero quelli che si sono abituati alla presenza dell'uomo. in Italia I lupi confidenti hanno fatto registrare sei dei sette attacchi all'essere umano ed è anche per queste ragioni che è importante non dar loro da mangiare o più in generale confidenza. Quando si arriva a queste situazioni è difficile tornare indietro e spesso le uniche soluzioni sono l'abbattimento o la cattività.
-Per quanto riguarda gli orsi, in Italia si sono registrati 6 aggressioni di cui sono una mortale e, in Europa 19 in 15 anni di cui nessuna mortale. In caso di aggressione gli esperti consigliano di stare fermi parlando in modo pacato e di portare con sé uno spray urticante. Discorso analogo per i cinghiali che al di fuori degli incidenti stradali non hanno provocato vittime.
-Tutto questo discorso non è per demonizzare l'abbattimento di animali come forma di contenimento di una specie aliena o non, anzi, in alcuni casi può rivelarsi essere una soluzione efficace. Il mio discorso vuole porre l'accento sulle decisioni prese per emotività, cultura, paura a dispetto di quelle che portano dei dati.
-Molte più vittime dipendono dalla caccia in sé. Dal 2011 al 2021
-(con una pandemia di mezzo che ha ridotto l'attività venatoria), i morti umani per colpa della caccia sono stati 209 con 682 i feriti, questo è ciò che emerge dai dati raccolti da vittimedellacaccia.org. La maggioranza delle vittime sono stati cacciatori, ma ci sono stati casi di gente che stava passeggiando nei boschi e
-addirittura persone colpite mentre erano dentro casa loro. 
+Per gli umani, il problema è rappresentado dai cosidetti lupi confidenti, ovvero quelli che si sono abituati alla presenza dell'uomo, da cui sono dipesi sei dei sette attacchi registrati, di cui nessuno mortale. Per queste ragioni che è importante non dar loro da mangiare o dare confidenza. 
+I cinghiali, fuori dagli incidenti stradali, non hanno provato vittime, mentre gli orsi hanno fatto registrare 6 aggressioni di cui sono una mortale.
+Parliamo quindi di numeri molti bassi rispetto alla minaccia che possono fare percepire talvolta i media o di alcune politiche che propongono l'abbattimento, che potrebbe portare ad altri problemi, invece di misure di prevenzione come gli spray urticanti di cui si parla poco. Inoltre dal 2011 al 2021 la caccia ha ucciso  molte più persone degli animali selvatici: 209 morti e 682 feriti secondo vittimedellacaccia.org. La maggioranza delle vittime sono stati cacciatori, ma ci sono stati casi di gente che stava passeggiando nei boschi e addirittura persone colpite mentre erano dentro casa loro. 
 
 \subsection{Lavoro e scuola}
-Siamo portati a pensare che, per colpa dello Stato non
-c'è lavoro. Qua potrei scatenare le ire di qualcuno, premetto che il mio discorso non è assoluto, ma relativo ad alcuni casi. Lo stato può fare tanto, ma anche le persone. Sarebbe bello vivere in un posto
-dove ci devono dare il lavoro, ma nella realtà questo non é così automatico. Possiamo noi stessi investire sulla nostra
-professionalità, se non sappiamo fare un lavoro di cui c'è bisogno, perché qualcuno dovrebbe volerci assumere? 
-Non dico che dobbiamo
-diventare tutti dei fisici aerospaziali, ma se uno entra in un'azienda edile e studia per prendere
-brevetti o patenti per guidare la ruspa, il camion, la gru ecc… eserciterà una leva più vantaggiosa sul suo
-futuro lavorativo rispetto ad altri. 
-Allo stesso modo, se desideriamo cambiare lavoro, è importante agire con prudenza: non si dovrebbe lasciare il proprio impiego prima di averne assicurato un altro. Solo una volta trovata una nuova occupazione possiamo permetterci di abbandonare la precedente, evitando così di esporci a rischi.
 
-La scuola potrebbe fare molto in questo senso invece, talvolta si limita a dare nozioni e meno strumenti. I ragazzi che oggi stanno frequentando scuola, saranno
-i lavoratori del futuro, dove, ci saranno lavori che oggi ancora non esistono e le cui nozioni che possiamo offrire potrebbero invecchiare velocemente. Questo fenomeno potrebbe diventare più frequente in un mondo che cambia così velocemente e, sarà quindi sempre più difficile smettere di studiare a scuola finita. Per questo motivo credo che più che le nozioni, la scuola dovrebbe insegnare a pensare e, imparare a imparare, oltre alla gestione del tempo e interpersonale, risolvere problemi ecc… 
+Puntare su settori dove c'è richiesta può essere una scelta pratica. Anche chi è molto capace in un ambito poco ricercato rischia di restare senza occupazione. Una buona strategia è cercare di rendersi il più possibile Indispensabili anche proponendo migliorie che non sono state richieste. Se poi si decide di cambiare strada, conviene trovare una nuova posizione prima di lasciare quella attuale, per evitare di esporsi a rischi che potrebbero diventare difficili da gestire.
+
+I ragazzi che oggi stanno studiando, potrebbero trovarsi ad affrontare lavori che oggi ancora non esistono, rendendo l'apprendimento un percorso che potrebbe continuare anche a scuola finita. Per questo credo che la scuola potrebbe spostarsi dalle nozioni agli strumenti per ottenere nozioni. Imparare a pensare in modo logico e critico, tecniche trasversali per la risoluzione dei problemi, nei vari ambiti, gestione del tempo e interpersonale.
 
 \begin{mdframed}[linewidth=1pt]
-È stato osservato che una settimana lavorativa di quattro giorni porta benefici significativi sia per i dipendenti che per le aziende. Gli studi hanno osservato che può portare a un aumento della produttività, a un miglioramento del benessere dei dipendenti e a una riduzione dei livelli di stress. Le aziende che hanno implementato questo modello hanno riportato un maggiore impegno dei dipendenti, un minor tasso di turnover e un miglioramento dell'equilibrio tra lavoro e vita privata. La settimana lavorativa di quattro giorni ha anche implicazioni positive per l'ambiente, poiché può portare a una riduzione degli spostamenti e del consumo di energia \endnote{\raggedright\url{https://www.4dayweek.com/research}}.
+La settimana lavorativa di quattro giorni può portare benefici sia per i dipendenti che per le aziende con un aumento della produttività, miglioramento del benessere e riduzione dei livelli di stress con anche implicazioni positive per l'ambiente, data la riduzione degli spostamenti e del consumo di energia \endnote{\raggedright\url{https://www.4dayweek.com/research}}.
 \end{mdframed}
+
+
+
+
+
 
 Capita spesso a scuola di giustificare una mancata consegna di un compito con frasi tipo: non lo sapevo fare, non me
 l'hanno detto, non ci sono riuscito ecc… Sul posto di lavoro questa modalità rischia di portarci lavori precari. Quello che un datore di lavoro cerca è qualcuno a cui affidare un compito e sapere che lo porterà a termine. Una
 volta usciti da scuola, anche se troviamo un posto di lavoro coerente con
 quello che abbiamo studiato, spesso ci verranno comunque assegnati lavori che non sappiamo fare. La scuola ci può fornire gli strumenti per
 arrivare alla soluzione di problemi nuovi, non importa come, utilizzando documentazioni, manuali, facendo prove,
-chiedendo aiuto a un collega o su Google, l'importante è trovare una soluzione. 
-
-\begin{mdframed}[linewidth=1pt]
-In Danimarca, per affrontare il disagio giovanile e il bullismo, è stato introdotto un insegnamento speciale nelle scuole: l’empatia. Questo insegnamento, obbligatorio dal 1993, consiste in lezioni settimanali di un’ora per studenti dai 6 ai 16 anni. Durante queste lezioni, chiamate “Klassens tid”, gli alunni discutono dei loro problemi e cercano soluzioni insieme, imparando a rispettare i sentimenti degli altri senza giudicarli.
-
-L’approccio danese al bullismo non è punitivo, ma si basa sul senso di comunità, chiamato “fællesskab”. Alcuni osservatori collegano questo approccio a una cultura scolastica percepita come meno soggetta a bullismo. L’insegnamento dell’empatia aiuta a rafforzare le relazioni tra gli studenti, prevenire il bullismo e far sentire ogni bambino ascoltato e valorizzato \endnote{In Danish Schools, Empathy Is Taught to Students Aged 6 to 16. \raggedright\url{https://mymodernmet.com/empathy-classes-demark/}} \endnote{Denmark's Empathy Classes are Teaching Kids Not to Bully. \raggedright\url{https://www.goodnet.org/articles/denmarks-empathy-classes-are-teaching-kids-to-bully}} \endnote{Denmark's students have mandatory empathy classes as part of the school. \raggedright\url{https://scoop.upworthy.com/students-learn-empathy-in-denmark-schools-492761-492761}} \endnote{Empathy? In Denmark they’re learning it in school. \raggedright\url{https://www.peace-ed-campaign.org/empathy-in-denmark-theyre-learning-it-in-school/}}.
-\end{mdframed}
+chiedendo aiuto a un collega o su Google, l'importante è trovare una soluzione.
 
 In Italia ad esempio, abbiamo un basso livello di comprensione del testo ed è tramite questa capacità che possiamo
 apprendere nuove conoscenze. Questo significa che una volta finita la scuola, che ci aiutava a comprendere, anche noi con lei,
